Working on mobile text issue (small commit) p.3

--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ a.active, a:hover {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 300px) {
     label.logo {
-        font-size: 25px;
+        font-size: 20px;
     }
 }
 
